@@ -71,10 +71,18 @@ def arch_canonicalize(arch, isa_spec):
   new_arch = ""
   extra_long_ext = []
   std_exts = []
+  std_exts_offset = 5
   if arch[:5] in ['rv32e', 'rv32i', 'rv32g', 'rv64i', 'rv64g']:
     new_arch = arch[:5].replace("g", "i")
     if arch[:5] in ['rv32g', 'rv64g']:
       std_exts = ['m', 'a', 'f', 'd']
+      if not is_isa_spec_2p2:
+        extra_long_ext = ['zicsr', 'zifencei']
+  elif arch[:6] in  ['rv128i', 'rv128g']:
+    new_arch = arch[:6].replace("g", "i")
+    std_exts = ['m', 'a', 'f', 'd']
+    std_exts_offset = 6
+    if arch[:6] in ['rv128g']:
       if not is_isa_spec_2p2:
         extra_long_ext = ['zicsr', 'zifencei']
   else:
@@ -88,10 +96,10 @@ def arch_canonicalize(arch, isa_spec):
   if long_ext_prefixes_idx:
     first_long_ext_idx = min(long_ext_prefixes_idx)
     long_exts = arch[first_long_ext_idx:].split("_")
-    std_exts += list(arch[5:first_long_ext_idx])
+    std_exts += list(arch[std_exts_offset:first_long_ext_idx])
   else:
     long_exts = []
-    std_exts += list(arch[5:])
+    std_exts += list(arch[std_exts_offset:])
 
   long_exts += extra_long_ext
 
