@@ -28,7 +28,10 @@ enum riscv_abi_type {
   ABI_ILP32D,
   ABI_LP64,
   ABI_LP64F,
-  ABI_LP64D
+  ABI_LP64D,
+  ABI_LLP128,
+  ABI_LLP128F,
+  ABI_LLP128D
 };
 extern enum riscv_abi_type riscv_abi;
 
